# mge

./: .clang-format  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  LICENSE.md  README.md  appveyor.yml  azure-pipelines.yml  index.html  index.md  vcpkg-configuration.json  vcpkg.json
src/mge/: CMakeLists.txt  config.hpp  config.hpp.in  dllexport.hpp  version.hpp.in
src/mge/application/: CMakeLists.txt  application.cpp  application.hpp  application_fwd.hpp  default_loop.cpp  dllexport.hpp  fixed_step_loop.cpp  loop.cpp  loop.hpp  loop_context.hpp  loop_target.hpp  simple_loop.cpp  update_thread.cpp  update_thread.hpp
src/mge/asset/: CMakeLists.txt  application_octet_stream_handler.cpp  application_octet_stream_loader.cpp  asset.cpp  asset.hpp  asset_access.cpp  asset_access.hpp  asset_access_factory.cpp  asset_access_factory.hpp  asset_corrupted.cpp  asset_corrupted.hpp  asset_fwd.hpp  asset_handle.cpp  asset_handle.hpp  asset_handler.cpp  asset_handler.hpp  asset_loader.cpp  asset_loader.hpp  asset_locator.cpp  asset_locator.hpp  asset_manager.cpp  asset_not_found.cpp  asset_not_found.hpp  asset_source.cpp  asset_source.hpp  asset_type.cpp  asset_type.hpp  asset_type_mapper.cpp  asset_type_mapper.hpp  db_asset_access.cpp  db_asset_access.hpp  db_asset_source.cpp  db_asset_source.hpp  dllexport.hpp  file_asset_access.cpp  file_asset_access.hpp  file_asset_access_factory.cpp  file_asset_access_factory.hpp  file_asset_factory.cpp  file_asset_source.cpp  (+5 more)
src/mge/core/: CMakeLists.txt  archive.cpp  archive.hpp  archive_access.cpp  archive_access.hpp  archive_access_factory.cpp  archive_access_factory.hpp  array_size.hpp  artifact.cpp  artifact.hpp  async_executor.cpp  async_executor.hpp  atexit.cpp  atexit.hpp  atomic.hpp  bit.hpp  bool_value.hpp  buffer.hpp  call_debugger.cpp  call_debugger.hpp  callable.hpp  callback_map.hpp  checked_cast.hpp  clear_function.hpp  clock.cpp  clock.hpp  closure.cpp  closure.hpp  component.cpp  component.hpp  component_dump_info_provider.cpp  configurable.cpp  configurable.hpp  configuration.cpp  configuration.hpp  configuration_database.cpp  configuration_database.hpp  contains.hpp  copy_struct.hpp  crash.cpp  (+182 more)
src/mge/entity/: CMakeLists.txt  component.hpp  container.cpp  container.hpp  dllexport.hpp  dummy.cpp  entity.cpp  entity.hpp  entity_class.hpp  entity_fwd.hpp  entity_library.cpp  entity_registry.cpp  entity_registry.hpp  entt.hpp  flecs.hpp  id_type.hpp  registry.cpp  registry.hpp  schema.hpp  world.cpp  world.hpp
src/mge/ffi/: CMakeLists.txt  ffi.cpp  ffi.hpp
src/mge/glfw/: CMakeLists.txt  glfw.cpp  glfw.hpp  glfw_instance.cpp  glfw_instance.hpp  monitor.cpp  monitor.hpp  window.cpp  window.hpp
src/mge/graphics/: CMakeLists.txt  attribute_semantic.cpp  attribute_semantic.hpp  blend_factor.hpp  blend_operation.hpp  buffer_access.cpp  buffer_access.hpp  buffer_change_policy.cpp  buffer_change_policy.hpp  buffer_type.cpp  buffer_type.hpp  buffer_usage.cpp  buffer_usage.hpp  canvas.cpp  canvas.hpp  color_names.cpp  color_names.hpp  color_write_mask.hpp  command.cpp  command.hpp  command_buffer.cpp  command_buffer.hpp  command_list.cpp  command_list.hpp  command_sequence.cpp  command_sequence.hpp  context_object.cpp  context_object.hpp  cull_mode.hpp  data_type.cpp  data_type.hpp  dimension.cpp  dllexport.hpp  draw_command.cpp  draw_command.hpp  draw_flags.hpp  draw_mode.hpp  drawable.cpp  drawable.hpp  encoder.hpp  (+110 more)
src/mge/input/: CMakeLists.txt  dllexport.hpp  input_handler.cpp  input_handler.hpp  input_state.cpp  input_state.hpp  key.cpp  key.hpp  key_action.cpp  key_action.hpp  keyboard_state.cpp  keyboard_state.hpp  modifier.cpp  modifier.hpp  mouse_action.cpp  mouse_action.hpp  mouse_state.cpp  mouse_state.hpp
src/mge/math/: CMakeLists.txt  aabox.cpp  aabox.hpp  common.hpp  dllexport.hpp  dummy.cpp  glm.hpp  mat..hpp  mat.hpp  mat4.cpp  mat4.hpp  math.cpp  plane.cpp  plane.hpp  quat.cpp  quat.hpp  quaternion.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  transform.hpp  vec.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp  vector_expression.hpp  vector_math.hpp  vector_minus.hpp
src/mge/reflect/: CMakeLists.txt  type_details.cpp  type_details.hpp
src/mge/reflection/: CMakeLists.txt  application_reflector.cpp  bind_builtin.cpp  bind_core.cpp  bind_math.cpp  bind_std.cpp  bind_types.hpp  call_context.cpp  call_context.hpp  constructor.hpp  core_reflector.cpp  destructor.hpp  detail.hpp  dllexport.hpp  field.cpp  field.hpp  function.hpp  function_details.cpp  function_details.hpp  function_parameter_helper.hpp  function_signature.cpp  graphics_reflector.cpp  input_reflector.cpp  invocation_context.cpp  invocation_context.hpp  math_reflector.cpp  module.cpp  module.hpp  module_definition.cpp  module_definition.hpp  module_details.cpp  module_details.hpp  parameter_source.hpp  proxy.hpp  reflection_fwd.hpp  reflector.cpp  reflector.hpp  return_value.hpp  scene_reflector.cpp  signature.cpp  (+13 more)
src/mge/reflection_/: CMakeLists.txt  bind_builtin.cpp  bind_core.cpp  bind_types.hpp  constructor.cpp  constructor.hpp  destructor.cpp  destructor.hpp  detail.hpp  dllexport.hpp  field.cpp  field.hpp  function_signature.cpp  function_signature.hpp  method.cpp  method.hpp  module_definition.cpp  parameter_source.hpp  reflection_fwd.hpp  return_value.hpp  signature.cpp  signature.hpp  type.cpp  type.hpp  type_definition.cpp  type_definition.hpp  visitor.cpp  visitor.hpp
src/mge/scene/: CMakeLists.txt  camera.cpp  camera.hpp  dllexport.hpp  entity.cpp  entity.hpp  geometry.cpp  geometry.hpp  light.hpp  material.hpp  material_type.hpp  mesh.cpp  mesh.hpp  movable.hpp  movable_entity.hpp  node.cpp  node.hpp  node.hpp.autosave  pbr_material.hpp  renderer.cpp  renderer.hpp  (+9 more)
src/modules/: CMakeLists.txt
src/samples/: CMakeLists.txt
src/test/: CMakeLists.txt  applicationtest.hpp  benchmark.cpp  benchmark.hpp  googlemock.hpp  googletest.hpp  run_coverage.py  streamtest.hpp  test_exception.hpp  test_format.hpp  test_main.cpp  test_simple_main.cpp  test_stream_op.hpp
(+1397 files in other folders)
